@@ -22,10 +22,33 @@ if "%OS%" == "Windows_NT" (
 set SERVER_OPTS=-Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dquarkus-log-max-startup-records=10000 -Dpicocli.disable.closures=true
 
 set DEBUG_MODE=false
-set DEBUG_PORT_VAR=8787
-set DEBUG_ADDRESS=0.0.0.0:%DEBUG_PORT_VAR%
+set DEBUG_ADDRESS=8787
 set DEBUG_SUSPEND_VAR=n
 set CONFIG_ARGS=
+
+if NOT "x%KC_DEBUG%" == "x" (
+    set DEBUG_MODE=%KC_DEBUG%
+) else (
+    if NOT "x%DEBUG%" == "x" (
+        set DEBUG_MODE=%DEBUG%
+    )
+)
+
+if NOT "x%KC_DEBUG_PORT%" == "x" (
+    set DEBUG_ADDRESS=%KC_DEBUG_PORT%
+) else (
+    if NOT "x%DEBUG_PORT%" == "x" (
+        set DEBUG_ADDRESS=%DEBUG_PORT%
+    )
+)
+
+if NOT "x%KC_DEBUG_SUSPEND%" == "x" (
+    set DEBUG_SUSPEND_VAR=%KC_DEBUG_SUSPEND%
+) else (
+    if NOT "x%DEBUG_SUSPEND%" == "x" (
+        set DEBUG_SUSPEND_VAR=%DEBUG_SUSPEND%
+    )
+)
 
 rem Read command-line args, the ~ removes the quotes from the parameter
 :READ-ARGS
@@ -35,26 +58,12 @@ if "%KEY%" == "" (
 )
 if "%KEY%" == "--debug" (
     set DEBUG_MODE=true
-    if 1%2 EQU +1%2 (
-        rem Plain port
-        set DEBUG_ADDRESS=0.0.0.0:%2
-        shift
-    ) else (
-        rem IPv4 or IPv6 address with optional port
-        (echo %2 | findstr /R "[0-9].*\." >nul || echo %2 | findstr /R "\[.*:.*\]" >nul) && (
-            (echo %2 | findstr /R "]:[0-9][0-9]*" >nul || echo %2 | findstr /R "^[0-9].*:[0-9][0-9]*" >nul) && (
-                set DEBUG_ADDRESS=%2
-            ) || (
-                set DEBUG_ADDRESS=%2:%DEBUG_PORT_VAR%
-            )
+    if NOT "x%~2" == "x" (
+        echo %~2 | findstr /R "^[0-9[]" >nul && (
+            set DEBUG_ADDRESS=%~2
             shift
         )
     )
-    shift
-    goto READ-ARGS
-)
-if "%KEY%" == "start-dev" (
-    set CONFIG_ARGS=%CONFIG_ARGS% --profile=dev %KEY%
     shift
     goto READ-ARGS
 )
@@ -102,7 +111,7 @@ if not "x%JAVA_OPTS%" == "x" (
     rem If the memory is not used, it will be freed. See https://developers.redhat.com/blog/2017/04/04/openjdk-and-containers for details.
     rem To optimize for large heap sizes or for throughput and better response time due to shorter GC pauses, consider ZGC and Shenandoah GC.
     rem As of KC25 and JDK17, G1GC, ZGC and Shenandoah GC seem to be eager to claim the maximum heap size. Tests showed that ZGC might need additional tuning in reclaiming dead objects.
-    set "JAVA_OPTS=-XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Dfile.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dsun.err.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8 -XX:+ExitOnOutOfMemoryError -Djava.security.egd=file:/dev/urandom -XX:+UseG1GC -XX:FlightRecorderOptions=stackdepth=512"
+    set "JAVA_OPTS=-XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Dfile.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dsun.err.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8 -XX:+ExitOnOutOfMemoryError -Djava.security.egd=file:/dev/urandom -XX:+UseG1GC -XX:FlightRecorderOptions=stackdepth=512 -Djdk.tls.rejectClientInitiatedRenegotiation=true"
 
     if "x%JAVA_OPTS_KC_HEAP%" == "x" (
         if "!KC_RUN_IN_CONTAINER!" == "true" (
@@ -120,10 +129,12 @@ if not "x%JAVA_OPTS%" == "x" (
 )
 
 @REM See also https://github.com/wildfly/wildfly-core/blob/7e5624cf92ebe4b64a4793a8c0b2a340c0d6d363/core-feature-pack/common/src/main/resources/content/bin/common.sh#L57-L60
+@REM java.base/java.lang=ALL-UNNAMED is required for JBoss Threads, see e.g. https://github.com/quarkusio/quarkus/pull/47637 and relevant https://github.com/quarkusio/quarkus/discussions/51041
+@REM --enable-native-access=ALL-UNNAMED is required for Infinispan: https://github.com/infinispan/infinispan/issues/15765#issuecomment-3839985807
 if not "x%JAVA_ADD_OPENS%" == "x" (
     echo "JAVA_ADD_OPENS already set in environment; overriding default settings"
 ) else (
-    set "JAVA_ADD_OPENS=--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED"
+    set "JAVA_ADD_OPENS=--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --enable-native-access=ALL-UNNAMED"
 )
 set "JAVA_OPTS=%JAVA_OPTS% %JAVA_ADD_OPENS%"
 
@@ -138,32 +149,6 @@ set "JAVA_OPTS=%JAVA_OPTS% %JAVA_LOCALE%"
 if not "x%JAVA_OPTS_APPEND%" == "x" (
     echo "Appending additional Java properties to JAVA_OPTS"
     set JAVA_OPTS=%JAVA_OPTS% %JAVA_OPTS_APPEND%
-)
-
-if NOT "x%KC_DEBUG%" == "x" (
-    set DEBUG_MODE=%KC_DEBUG%
-) else (
-    if NOT "x%DEBUG%" == "x" (
-        set DEBUG_MODE=%DEBUG%
-    )
-)
-
-if NOT "x%KC_DEBUG_PORT%" == "x" (
-    set DEBUG_PORT_VAR=%KC_DEBUG_PORT%
-    set DEBUG_ADDRESS=0.0.0.0:!DEBUG_PORT_VAR!
-) else (
-    if NOT "x%DEBUG_PORT%" == "x" (
-        set DEBUG_PORT_VAR=%DEBUG_PORT%
-        set DEBUG_ADDRESS=0.0.0.0:!DEBUG_PORT_VAR!
-    )
-)
-
-if NOT "x%KC_DEBUG_SUSPEND%" == "x" (
-    set DEBUG_SUSPEND_VAR=%KC_DEBUG_SUSPEND%
-) else (
-    if NOT "x%DEBUG_SUSPEND%" == "x" (
-        set DEBUG_SUSPEND_VAR=%DEBUG_SUSPEND%
-    )
 )
 
 rem Set debug settings if not already set
